[tool.poetry]
name = "fake-news-detector"
version = "0.1.0"
description = "Project to detect fake news"
authors = ["dcc"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
matplotlib = "3.7"
jupyter = "^1.0.0"
pandas = "~2.0"
numpy = "~1.25"
nltk = "^3.8.1"
gensim = "^4.3.2"
mlflow = "^2.8.0"
streamlit = "^1.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
